# Oaktree-Tech-AI-Servitor

./: CHANGELOG.md  LICENSE  README.md  README.txt  VALIDATION.json  VALIDATION_AUTONOMOUS.json  VALIDATION_CERTIFICATE_INTEGRATION.json  VALIDATION_CLOSED_LOOP.json  VALIDATION_DEPLOYMENT_VALIDATED.json  VALIDATION_FINAL_MODULES.json  VALIDATION_INSTALLER_PRODUCTION.json  VALIDATION_ISO_INTEGRATION.json  VALIDATION_ONE_CLICK.json  VALIDATION_PRODUCTION_MODULES.json  __init__.py  agent_loop.py  api_server.py  auth.py  autorun.inf  certificate_manager.py  certificate_store.py  cli.py  code_index.py  config_wizard.py  crash_reporter.py  database.py  defaults_scanner.py  deployment_validator.py  distributed_worker.py  environment_setup.py  filesystem_matrix.py  final_cli.py  full_workflow_runner.py  git_integration.py  gui_app.py  installer_cli.py  integration_harness.py  iso_packager.py  isolation_manager.py  k8s_tester.py  (+29 more)
app/python/: Makefile  config.example.json  pyproject.toml
app/python/ai_serviter/: __init__.py  api_server.py  approval.py  audit.py  auto_patcher.py  cli.py  container_sandbox.py  llm_provider.py  patcher.py  planner.py  policy_engine.py  rbac.py  runtime.py  sandbox.py  self_correction.py  service.py  serviter.py  structured_patch.py  test_runner.py  vector_memory.py
app/python/lattice/: hot_reload.py
app/python/plugins/: ai_serviter.py  storage.py
app/python/tests/: test_autonomous_modules.py  test_closed_loop_upgrades.py  test_enterprise_modules.py  test_iso_packager.py
assets/: BRANDING.md
branding/: build_icons.sh
docs/: README.md  (+9 more)
(+71 files in other folders)
